[gd_scene load_steps=3 format=3 uid="uid://ychsh5rigt5i"]

[ext_resource type="Script" uid="uid://cxehe8cfw3mam" path="res://scenes/menu/ControlSettings.gd" id="1_od8gn"]

[sub_resource type="LabelSettings" id="LabelSettings_kfvnr"]
font_size = 64

[node name="ControlSettings" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_od8gn")

[node name="MainOptions" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="MainOptions"]
layout_mode = 2
text = "Control Settings"
label_settings = SubResource("LabelSettings_kfvnr")

[node name="Back" type="Button" parent="MainOptions"]
layout_mode = 2
text = "Back
"

[node name="RestoreDefaultsButton" type="Button" parent="MainOptions"]
layout_mode = 2
text = "Restore Default Settings"

[node name="MouseOptions" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Spacer" type="Label" parent="MouseOptions"]
layout_mode = 2
text = " "

[node name="Label" type="Label" parent="MouseOptions"]
layout_mode = 2
text = "Mouse Sensitivity
"

[node name="Sensitivity" type="HSlider" parent="MouseOptions"]
layout_mode = 2
min_value = 0.1
max_value = 3.0
step = 0.05
value = 1.0

[node name="SensitivityValue" type="Label" parent="MouseOptions"]
layout_mode = 2
text = "100%"
horizontal_alignment = 1

[node name="InvertY" type="CheckBox" parent="MouseOptions"]
layout_mode = 2
text = "Invert Y-axis"

[node name="Spacer" type="Label" parent="."]
layout_mode = 2
text = " "

[node name="ControlsLabel" type="Label" parent="."]
layout_mode = 2
text = "Remap Inputs"

[node name="MappingContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="JoyOptions" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Spacer" type="Label" parent="JoyOptions"]
layout_mode = 2
text = " "

[node name="Label" type="Label" parent="JoyOptions"]
layout_mode = 2
text = "Joypad Camera Deadzone
"

[node name="Deadzone" type="HSlider" parent="JoyOptions"]
layout_mode = 2
max_value = 0.9
step = 0.01
value = 0.05

[node name="DeadzoneValue" type="Label" parent="JoyOptions"]
layout_mode = 2
text = "5%"
horizontal_alignment = 1

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MainOptions/Back" to="." method="_on_resume"]
[connection signal="pressed" from="MainOptions/RestoreDefaultsButton" to="." method="_on_restore_defaults_button_pressed"]
[connection signal="value_changed" from="MouseOptions/Sensitivity" to="." method="_on_sensitivity_value_changed"]
[connection signal="toggled" from="MouseOptions/InvertY" to="." method="_on_invert_y_toggled"]
[connection signal="value_changed" from="JoyOptions/Deadzone" to="." method="_on_deadzone_value_changed"]
